--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,3 +25,8 @@ jobs:
     - name: Build with Gradle
       working-directory: easycontrol
       run: ./gradlew build
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: app-release
+        path: app/build/
