--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,4 +29,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: app-release
-        path: app/build/
+        path: /home/runner/work/Easycontrol/Easycontrol/easycontrol/app/build/
