--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,8 +25,14 @@ jobs:
     - name: Build with Gradle
       working-directory: easycontrol
       run: ./gradlew build
+    - name: Package Files
+      run: |
+        # Create a zip archive with all files in the specified directory
+        cd /home/runner/work/Easycontrol/Easycontrol/easycontrol/app/
+        zip -r my-package.zip .
+
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: app-release
-        path: /home/runner/work/Easycontrol/Easycontrol/easycontrol/app/build/
+        name: my-package
+        path: my-package.zip
